--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "d3-geo": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.21.2",
+    "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.4",
     "typescript": "^5.2.2",
