--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.4",
+    "tippy.js": "^6.3.7",
     "typescript": "^5.2.2",
     "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "react-scripts": {
+      "typescript": "^5"
+    }
   },
   "scripts": {
     "start": "react-scripts start",
