--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/d3": "^7.4.2",
+    "@types/d3": "7.4.3",
     "@types/geojson": "^7946.0.13",
     "@types/jest": "^29.5.6",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.8.7",
     "@types/react": "^18.2.29",
     "@types/react-dom": "^18.2.14",
-    "d3": "^7.8.5",
+    "d3": "7.8.5",
     "d3-geo": "^3.1.0",
     "framer-motion": "^11.0.5",
     "lodash": "^4.17.21",
