--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "d3": "7.8.5",
     "d3-geo": "^3.1.0",
     "framer-motion": "^11.0.5",
+    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -54,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.8",
     "eslint": "^8.51.0",
     "eslint-plugin-react": "^7.33.2",
     "tailwindcss": "^3.4.1"
