--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.21.2",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
