--- a/src/config.json
+++ b/src/config.json
@@ -2,5 +2,6 @@
   "BACKEND_URL": "http://localhost:4000",
   "DATA_KEY": "/data",
   "GEOJSON_KEY": "/geojson",
-  "FILTERS_KEY": "/filters"
+  "FILTERS_KEY": "/filters",
+  "AUDIO_KEY": "/audio"
 }
