--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router": "^6.21.2",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
+    "react-zoom-pan-pinch": "^3.4.4",
     "styled-components": "^6.0.4",
     "tippy.js": "^6.3.7",
     "typescript": "^5.2.2",
