--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,6 @@
 {
   "BACKEND_URL": "http://localhost:4000",
+  "HEATTREE_SERVER": "http://localhost:8000/?",
   "DATA_KEY": "/data",
   "GEOJSON_KEY": "/geojson",
   "FILTERS_KEY": "/filters",
